[package]
name = "aptos-node"
version = "0.1.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "Aptos node"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.58"
bcs = "0.1.3"
clap = "3.1.8"
fail = "0.5.0"
futures = "0.3.21"
hex = "0.4.3"
rand = "0.7.3"
rayon = "1.5.2"
tokio = { version = "1.21.0", features = ["full"] }
tokio-stream = "0.1.8"

aptos-api = { path = "../api" }
aptos-build-info = { path = "../crates/aptos-build-info" }
aptos-config = { path = "../config" }
aptos-crypto = { path = "../crates/aptos-crypto" }
aptos-data-client = { path = "../state-sync/aptos-data-client" }
aptos-fh-stream = { path = "../ecosystem/sf-indexer/firehose-stream" }
aptos-genesis = { path = "../crates/aptos-genesis", features = ["testing"] }
aptos-indexer = { path = "../crates/indexer", optional = true }
aptos-infallible = { path = "../crates/aptos-infallible" }
aptos-logger = { path = "../crates/aptos-logger" }
aptos-mempool = { path = "../mempool" }
aptos-secure-storage = { path = "../secure/storage" }
aptos-state-view = { path = "../storage/state-view" }
aptos-telemetry = { path = "../crates/aptos-telemetry" }
aptos-temppath = { path = "../crates/aptos-temppath" }
aptos-time-service = { path = "../crates/aptos-time-service" }
aptos-types = { path = "../types" }
aptos-vm = { path = "../aptos-move/aptos-vm" }

aptosdb = { path = "../storage/aptosdb" }
backup-service = { path = "../storage/backup/backup-service" }
cached-packages = { path = "../aptos-move/framework/cached-packages" }
consensus = { path = "../consensus" }
consensus-notifications = { path = "../state-sync/inter-component/consensus-notifications" }
crash-handler = { path = "../crates/crash-handler" }
data-streaming-service = { path = "../state-sync/state-sync-v2/data-streaming-service" }
event-notifications = { path = "../state-sync/inter-component/event-notifications" }
executor = { path = "../execution/executor" }
executor-types = { path = "../execution/executor-types" }
framework = { path = "../aptos-move/framework" }
inspection-service = { path = "../crates/inspection-service" }
mempool-notifications = { path = "../state-sync/inter-component/mempool-notifications" }
network = { path = "../network" }
network-builder = { path = "../network/builder" }
state-sync-driver = { path = "../state-sync/state-sync-v2/state-sync-driver" }
storage-interface = { path = "../storage/storage-interface" }
storage-service-client = { path = "../state-sync/storage-service/client" }
storage-service-server = { path = "../state-sync/storage-service/server" }

[target.'cfg(unix)'.dependencies]
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }

[features]
default = []
assert-private-keys-not-cloneable = ["aptos-crypto/assert-private-keys-not-cloneable"]
failpoints = ["fail/failpoints", "consensus/failpoints", "executor/failpoints", "aptos-mempool/failpoints", "aptos-api/failpoints"]
indexer = ["aptos-indexer"]
