[package]
name = "aptos-node"
description = "Aptos node"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-api = { workspace = true }
aptos-backup-service = { workspace = true }
aptos-build-info = { workspace = true }
aptos-cached-packages = { workspace = true }
aptos-config = { workspace = true }
aptos-consensus = { workspace = true }
aptos-consensus-notifications = { workspace = true }
aptos-crash-handler = { workspace = true }
aptos-crypto = { workspace = true }
aptos-data-client = { workspace = true }
aptos-data-streaming-service = { workspace = true }
aptos-genesis = { workspace = true }
aptos-indexer = { workspace = true, optional = true }
aptos-infallible = { workspace = true }
aptos-logger = { workspace = true }
aptos-mempool = { workspace = true }
aptos-secure-storage = { workspace = true }
aptos-state-view = { workspace = true }
aptos-telemetry = { workspace = true }
aptos-temppath = { workspace = true }
aptos-time-service = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
aptosdb = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
event-notifications = { workspace = true }
executor = { workspace = true }
executor-types = { workspace = true }
fail = { workspace = true }
framework = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
inspection-service = { workspace = true }
mempool-notifications = { workspace = true }
network = { workspace = true }
network-builder = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
state-sync-driver = { workspace = true }
storage-interface = { workspace = true }
storage-service-client = { workspace = true }
storage-service-server = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[target.'cfg(unix)'.dependencies]
jemallocator = { workspace = true }

[features]
default = []
assert-private-keys-not-cloneable = ["aptos-crypto/assert-private-keys-not-cloneable"]
failpoints = ["fail/failpoints", "aptos-consensus/failpoints", "executor/failpoints", "aptos-mempool/failpoints", "aptos-api/failpoints"]
indexer = ["aptos-indexer"]
check-vm-features = []
