[package]
name = "aptos-node"
description = "Aptos node"
version = "0.0.0-main"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-admin-service = { workspace = true }
aptos-api = { workspace = true }
aptos-backup-service = { workspace = true }
aptos-build-info = { workspace = true }
aptos-cached-packages = { workspace = true }
aptos-channels = { workspace = true }
aptos-config = { workspace = true }
aptos-consensus = { workspace = true }
aptos-consensus-notifications = { workspace = true }
aptos-crash-handler = { workspace = true }
aptos-crypto = { workspace = true }
aptos-data-client = { workspace = true }
aptos-data-streaming-service = { workspace = true }
aptos-db = { workspace = true }
aptos-db-indexer = { workspace = true }
aptos-dkg-runtime = { workspace = true }
aptos-event-notifications = { workspace = true }
aptos-executor = { workspace = true }
aptos-framework = { workspace = true }
aptos-genesis = { workspace = true }
aptos-indexer = { workspace = true, optional = true }
aptos-indexer-grpc-fullnode = { workspace = true }
aptos-indexer-grpc-table-info = { workspace = true }
aptos-infallible = { workspace = true }
aptos-inspection-service = { workspace = true }
aptos-jwk-consensus = { workspace = true }
aptos-logger = { workspace = true, features = ["node-identity"] }
aptos-mempool = { workspace = true }
aptos-mempool-notifications = { workspace = true }
aptos-network = { workspace = true }
aptos-network-benchmark = { workspace = true }
aptos-network-builder = { workspace = true }
aptos-node-identity = { workspace = true }
aptos-peer-monitoring-service-client = { workspace = true }
aptos-peer-monitoring-service-server = { workspace = true }
aptos-peer-monitoring-service-types = { workspace = true }
aptos-runtimes = { workspace = true }
aptos-state-sync-driver = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-storage-service-client = { workspace = true }
aptos-storage-service-notifications = { workspace = true }
aptos-storage-service-server = { workspace = true }
aptos-storage-service-types = { workspace = true }
aptos-telemetry = { workspace = true }
aptos-temppath = { workspace = true }
aptos-time-service = { workspace = true }
aptos-types = { workspace = true }
aptos-validator-transaction-pool = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-environment = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
either = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
warp = { workspace = true }
bytes = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
aptos-metrics-core = { workspace = true }

[target.'cfg(unix)'.dependencies]
jemallocator = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rstack-self = { workspace = true }

[features]
assert-private-keys-not-cloneable = [
    "aptos-crypto/assert-private-keys-not-cloneable",
]
check-vm-features = []
consensus-only-perf-test = [
    "aptos-executor/consensus-only-perf-test",
    "aptos-mempool/consensus-only-perf-test",
    "aptos-db/consensus-only-perf-test",
]
default = []
failpoints = [
    "fail/failpoints",
    "aptos-consensus/failpoints",
    "aptos-executor/failpoints",
    "aptos-mempool/failpoints",
    "aptos-api/failpoints",
    "aptos-config/failpoints",
]
indexer = ["aptos-indexer"]
tokio-console = ["aptos-logger/tokio-console", "aptos-config/tokio-console"]
smoke-test = ["aptos-jwk-consensus/smoke-test", "aptos-dkg-runtime/smoke-test"]
sim-types = ["aptos-consensus/sim-types"]
force-aptos-types = ["aptos-consensus/force-aptos-types"]
inject-delays = ["aptos-consensus/inject-delays"]
inject-drops = ["aptos-consensus/inject-drops"]


[package.metadata.cargo-machete]
ignored = ["aptos-crypto"]
