[package]
name = "aptos-config"
description = "Aptos config"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-crypto = { workspace = true }
aptos-global-constants = { workspace = true }
aptos-logger = { workspace = true }
aptos-secure-storage = { workspace = true }
aptos-short-hex-str = { workspace = true }
aptos-temppath = { workspace = true }
aptos-types = { workspace = true }
arr_macro = { workspace = true }
bcs = { workspace = true }
byteorder = { workspace = true }
cfg-if = { workspace = true }
get_if_addrs = { workspace = true }
maplit = { workspace = true }
num_cpus = { workspace = true }
poem-openapi = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_merge = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
aptos-crypto = { workspace = true }
aptos-types = { workspace = true, features = ["fuzzing"] }
tempfile = { workspace = true }

[features]
default = []
failpoints = []
fuzzing = ["aptos-crypto/fuzzing", "aptos-types/fuzzing"]
smoke-test = []
testing = []
tokio-console = []
