[package]
name = "velor-consensus"
description = "Velor consensus"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
velor-bitvec = { workspace = true }
velor-bounded-executor = { workspace = true }
velor-channels = { workspace = true }
velor-collections = { workspace = true }
velor-config = { workspace = true }
velor-consensus-notifications = { workspace = true }
velor-consensus-types = { workspace = true }
velor-crypto = { workspace = true }
velor-crypto-derive = { workspace = true }
velor-dkg = { workspace = true }
velor-enum-conversion-derive = { workspace = true }
velor-event-notifications = { workspace = true }
velor-executor = { workspace = true }
velor-executor-types = { workspace = true }
velor-experimental-runtimes = { workspace = true }
velor-fallible = { workspace = true }
velor-infallible = { workspace = true }
velor-logger = { workspace = true }
velor-mempool = { workspace = true }
velor-metrics-core = { workspace = true }
velor-network = { workspace = true }
velor-peer-monitoring-service-types = { workspace = true }
velor-reliable-broadcast = { workspace = true }
velor-runtimes = { workspace = true }
velor-safety-rules = { workspace = true }
velor-schemadb = { workspace = true }
velor-secure-storage = { workspace = true }
velor-short-hex-str = { workspace = true }
velor-storage-interface = { workspace = true }
velor-temppath = { workspace = true }
velor-time-service = { workspace = true }
velor-transaction-filters = { workspace = true }
velor-types = { workspace = true }
velor-validator-transaction-pool = { workspace = true }
velor-vm = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
claims = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
enum_dispatch = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
lru = { workspace = true }
maplit = { workspace = true }
mini-moka = { workspace = true }
mirai-annotations = { workspace = true }
move-core-types = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
velor-cached-packages = { workspace = true }
velor-config = { workspace = true, features = ["fuzzing"] }
velor-consensus-types = { workspace = true, features = ["fuzzing"] }
velor-executor-test-helpers = { workspace = true }
velor-keygen = { workspace = true }
velor-mempool = { workspace = true, features = ["fuzzing"] }
velor-netcore = { workspace = true }
velor-network = { workspace = true, features = ["fuzzing"] }
velor-safety-rules = { workspace = true, features = ["testing"] }
velor-transaction-filters = { workspace = true, features = ["fuzzing"] }
velor-types = { workspace = true, features = ["testing"] }
velor-vm = { workspace = true, features = ["fuzzing"] }
velor-vm-validator = { workspace = true }
claims = { workspace = true }
mockall = { workspace = true }
move-core-types = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
fuzzing = [
    "velor-consensus-types/fuzzing",
    "velor-config/fuzzing",
    "velor-crypto/fuzzing",
    "velor-mempool/fuzzing",
    "velor-types/fuzzing",
    "velor-safety-rules/testing",
]
failpoints = ["fail/failpoints"]

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[lints.clippy]
unwrap_used = "deny"
