[package]
name = "diem-node"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem node"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bcs = "0.1.2"
fail = "0.4.0"
futures = "0.3.12"
hex = "0.4.3"
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
rand = "0.8.3"
structopt = "0.3.21"
tokio = { version = "1.8.1", features = ["full"] }
tokio-stream = "0.1.4"

backup-service = { path = "../storage/backup/backup-service" }
consensus = { path = "../consensus" }
consensus-notifications = { path = "../state-sync/inter-component/consensus-notifications" }
crash-handler = { path = "../crates/crash-handler" }
data-streaming-service = { path = "../state-sync/state-sync-v2/data-streaming-service" }
diem-infallible = { path = "../crates/diem-infallible" }
debug-interface = { path = "../crates/debug-interface" }
event-notifications = { path = "../state-sync/inter-component/event-notifications" }
executor = { path = "../execution/executor" }
executor-types = { path = "../execution/executor-types" }
diem-api = { path = "../api" }
diem-config = { path = "../config" }
diem-crypto = { path = "../crates/diem-crypto" }
diem-data-client = { path = "../state-sync/diem-data-client" }
diem-framework-releases = { path = "../diem-move/diem-framework/DPN/releases" }
diem-genesis-tool = {path = "../config/management/genesis", features = ["testing"] }
diem-json-rpc = { path = "../json-rpc" }
diem-logger = { path = "../common/logger" }
diem-mempool = { path = "../mempool" }
diem-metrics = { path = "../common/metrics" }
diem-secure-storage = { path = "../secure/storage" }
diem-temppath = { path = "../common/temppath" }
diem-time-service = { path = "../common/time-service" }
diem-types = { path = "../types" }
diem-vm = { path = "../diem-move/diem-vm" }
diem-workspace-hack = { path = "../crates/diem-workspace-hack" }
diemdb = { path = "../storage/diemdb" }
mempool-notifications = { path = "../state-sync/inter-component/mempool-notifications" }
network = { path = "../network" }
network-builder = { path = "../network/builder" }
state-sync-multiplexer = { path = "../state-sync/state-sync-v2/state-sync-multiplexer" }
state-sync-v1 = { path = "../state-sync/state-sync-v1" }
storage-client = { path = "../storage/storage-client" }
storage-interface= { path = "../storage/storage-interface" }
storage-service = { path = "../storage/storage-service" }
storage-service-client = { path = "../state-sync/storage-service/client" }
storage-service-server = { path = "../state-sync/storage-service/server" }

[features]
default = []
assert-private-keys-not-cloneable = ["diem-crypto/assert-private-keys-not-cloneable"]
failpoints = ["fail/failpoints", "consensus/failpoints", "executor/failpoints", "diem-json-rpc/failpoints", "diem-mempool/failpoints", "diem-api/failpoints"]
