[package]
name = "aptos-mempool"
description = "Aptos mempool for consuming incoming transactions"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-bounded-executor = { workspace = true }
aptos-config = { workspace = true }
aptos-consensus-types = { workspace = true }
aptos-crypto = { workspace = true }
aptos-infallible = { workspace = true }
aptos-logger = { workspace = true }
aptos-metrics-core = { workspace = true }
aptos-proptest-helpers = { workspace = true, optional = true }
aptos-types = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
channel = { workspace = true }
event-notifications = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
mempool-notifications = { workspace = true }
netcore = { workspace = true }
network = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
short-hex-str = { workspace = true }
storage-interface = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
vm-validator = { workspace = true }

[dev-dependencies]
aptos-compression = { workspace = true }
aptos-config = { workspace = true }
aptos-id-generator = { workspace = true }
enum_dispatch = { workspace = true }
network = { workspace = true, features = ["fuzzing"] }
proptest = { workspace = true }
storage-interface = { workspace = true, features = ["fuzzing"] }

[features]
default = []
failpoints = ["fail/failpoints", "vm-validator/failpoints"]
fuzzing = ["proptest", "aptos-types/fuzzing", "storage-interface/fuzzing", "aptos-config/fuzzing"]
