[package]
name = "aptos-mempool"
description = "Aptos mempool for consuming incoming transactions"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-bounded-executor = { workspace = true }
aptos-channels = { workspace = true }
aptos-config = { workspace = true }
aptos-consensus-types = { workspace = true }
aptos-crypto = { workspace = true }
aptos-event-notifications = { workspace = true }
aptos-infallible = { workspace = true }
aptos-logger = { workspace = true }
aptos-mempool-notifications = { workspace = true }
aptos-metrics-core = { workspace = true }
aptos-netcore = { workspace = true }
aptos-network = { workspace = true }
aptos-peer-monitoring-service-types = { workspace = true }
aptos-runtimes = { workspace = true }
aptos-short-hex-str = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-time-service = { workspace = true }
aptos-transactions-filter = { workspace = true }
aptos-types = { workspace = true }
aptos-vm-validator = { workspace = true }
bcs = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
aptos-compression = { workspace = true }
aptos-config = { workspace = true }
aptos-id-generator = { workspace = true }
aptos-network = { workspace = true, features = ["fuzzing"] }
aptos-storage-interface = { workspace = true, features = ["fuzzing"] }
aptos-time-service = { workspace = true, features = ["testing"] }
enum_dispatch = { workspace = true }
proptest = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints", "aptos-vm-validator/failpoints"]
fuzzing = ["proptest", "aptos-types/fuzzing", "aptos-storage-interface/fuzzing", "aptos-config/fuzzing"]
consensus-only-perf-test = []
