[package]
name = "velor-mempool"
description = "Velor mempool for consuming incoming transactions"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
velor-bounded-executor = { workspace = true }
velor-channels = { workspace = true }
velor-config = { workspace = true }
velor-consensus-types = { workspace = true }
velor-crypto = { workspace = true }
velor-event-notifications = { workspace = true }
velor-infallible = { workspace = true }
velor-logger = { workspace = true }
velor-mempool-notifications = { workspace = true }
velor-metrics-core = { workspace = true }
velor-netcore = { workspace = true }
velor-network = { workspace = true }
velor-peer-monitoring-service-types = { workspace = true }
velor-runtimes = { workspace = true }
velor-short-hex-str = { workspace = true }
velor-storage-interface = { workspace = true }
velor-time-service = { workspace = true }
velor-transaction-filters = { workspace = true }
velor-types = { workspace = true }
velor-vm-validator = { workspace = true }
bcs = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
velor-compression = { workspace = true }
velor-config = { workspace = true }
velor-id-generator = { workspace = true }
velor-network = { workspace = true, features = ["fuzzing"] }
velor-storage-interface = { workspace = true, features = ["fuzzing"] }
velor-time-service = { workspace = true, features = ["testing"] }
velor-transaction-filters = { workspace = true, features = ["fuzzing"] }
enum_dispatch = { workspace = true }
proptest = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints", "velor-vm-validator/failpoints"]
fuzzing = ["proptest", "velor-types/fuzzing", "velor-storage-interface/fuzzing", "velor-config/fuzzing"]
consensus-only-perf-test = []
