[package]
name = "network"
version = "0.1.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "Aptos networking stack"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
bcs = "0.1.3"
bytes = { version = "1.0.1", features = ["serde"] }
futures = "0.3.21"
futures-util = "0.3.21"
hex = "0.4.3"
itertools = "0.10.1"
once_cell = "1.10.0"
pin-project = "1.0.10"
proptest = { version = "1.0.0", default-features = true, optional = true }
proptest-derive = { version = "0.3.0", optional = true }
rand = { version = "0.7.3", features = ["small_rng"] }
serde = { version = "1.0.137", default-features = false }
serde_bytes = "0.11.6"
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.21.0", features = ["full"] }
tokio-retry = "0.3.0"
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }

aptos-compression = { path = "../crates/aptos-compression" }
aptos-config = { path = "../config" }
aptos-crypto = { path = "../crates/aptos-crypto" }
aptos-crypto-derive = { path = "../crates/aptos-crypto-derive" }
aptos-id-generator = { path = "../crates/aptos-id-generator" }
aptos-infallible = { path = "../crates/aptos-infallible" }
aptos-logger = { path = "../crates/aptos-logger" }
aptos-metrics-core = { path = "../crates/aptos-metrics-core" }
aptos-proptest-helpers = { path = "../crates/aptos-proptest-helpers", optional = true }
aptos-rate-limiter = { path = "../crates/aptos-rate-limiter" }
aptos-time-service = { path = "../crates/aptos-time-service", features = ["async"] }
aptos-types = { path = "../types" }

bitvec = { path = "../crates/aptos-bitvec", package = "aptos-bitvec" }
channel = { path = "../crates/channel" }
memsocket = { path = "./memsocket", optional = true }
netcore = { path = "./netcore" }
num-variants = { path = "../crates/num-variants" }
short-hex-str = { path = "../crates/short-hex-str" }

[dev-dependencies]
maplit = "1.0.2"
proptest = { version = "1.0.0", default-features = true }
proptest-derive = { version = "0.3.0" }
rand_core = "0.5.1"

aptos-config = { path = "../config", features = ["testing"] }
aptos-proptest-helpers = { path = "../crates/aptos-proptest-helpers" }
aptos-time-service = { path = "../crates/aptos-time-service", features = ["async", "testing"] }
aptos-types = { path = "../types", features = ["fuzzing"] }
bitvec = { path = "../crates/aptos-bitvec", package = "aptos-bitvec", features = ["fuzzing"] }
memsocket = { path = "./memsocket" }
netcore = { path = "./netcore", features = ["testing"] }

[features]
default = []
fuzzing = ["bitvec/fuzzing", "aptos-config/fuzzing", "aptos-crypto/fuzzing", "aptos-types/fuzzing", "aptos-proptest-helpers", "aptos-time-service/testing", "aptos-types/fuzzing", "memsocket/testing", "netcore/fuzzing", "proptest", "proptest-derive"]
testing = ["aptos-config/testing", "aptos-time-service/testing", "memsocket/testing", "netcore/testing"]
